Closed Bug 39158 Opened 26 years ago Closed 25 years ago

Control is crashing Visual Basic when compiled

Categories

(Core Graveyard :: Embedding: ActiveX Wrapper, defect, P1)

x86
Windows NT
defect

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: kerz, Assigned: adamlock)

Details

(Keywords: crash, embed, Whiteboard: [nsbeta3+])

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/4.73 [en] (WinNT; I) BuildID: 2000051210 Visual Basic crashes when attempting to compile a program that has the Moz. control in it. Any program that has the control already compiled in it also crashes (Custom Browswers gecko.exe file included in their demo zip). Reproducible: Always Steps to Reproduce: 1.Load VB 2.Add Mozilla control to VB form, no code needed. 3.Attempt to compile 4.Crash Actual Results: Crash - Application popup: VB6.EXE - Application Error : The instruction at "0x60bca7a8" referenced memory at "0x00000000". The memory could not be "read". Expected Results: Form should have displayed. I am using WinNT with sp6. I am not running anything special when attempting this, MIRC, Netscape 4, AIM, ICQ. I have the whole visual studio installed. When trying to run custom browser's gecko.exe, the crash is: Application popup: NetscapeDispatchWnd: Gecko.exe - Application Error : The instruction at "0x60bca7a8" referenced memory at "0x00000000". The memory could not be "read".
Adding crash keyword
Keywords: crash
Are you running VB with SP3 applied?
SP3 for VB or NT? I have not updated vb since installation, NT is on SP6.
SP3 for VB. There may be some conflict between a control built with SP3 and an old environment. Also ensure you have no old Mozilla builds in your path.
Checked my path, updated to SP3 and still no luck with gecko.exe or the control. Also, I tried your newly posted IE DHTML test, and that caused IE to close with and error.
I spent a significant amount of time on Friday trying to replicate the problem and couldn't. Do you still see the behaviour in more recent builds?
Reassigning to myself!
Assignee: locka → adamlock
I just tested this on 2000070308 and I still crash. I have WinNT sp6, vb6sp3. I first tried to simply use the control in VB. I went through the instructions on how to install the control on Adam's page, opened vb, added the control to the components bar, then tried adding an instance of the control to a blank project. It tried to get something from the net (ZoneAlarm, my firewall, said VB was trying to access the internet, and so I let it.) Then VB quit with the error: VB6.EXE - Application Error : The instruction at "0x60c341e8" referenced memory at "0x00000000". The memory could not be "read". I then tried the IE test page. The page loaded, asked if it could run the control twice, then said it had encountered an error and must be shut down. The dialog was nonModal, so i refocused on the IE window. The control seemed to load, but the window was blank. So I hit the go button with www.mozilla.org in the control's url bar. The page seemed to reload, it asked once again twice, if it could load the control, then IE crashed with the error: IEXPLORE.EXE - Application Error : The instruction at "0x60c341e8" referenced memory at "0x00000000". The memory could not be "read". Still no luck :(
Treating this problem as part of the NS_InitXPCOM/NS_TermXPCOM problem. Assigning to myself for the moment, but I may mark it as a duplicate of another bug that covers this problem.
Status: NEW → ASSIGNED
Target Milestone: --- → Future
I've been trying to embed the rendering engine as well, VB6 SP3 on Win2K Pro. I add the DLL mozctl.dll, and as soon as I try to draw the control on a form VB crashes with the same error as previously reported on this bug.
Gecko.exe was built with VB SP3. Regardless, using VB SP4 I get the following error: ======================================== VB6 caused an invalid page fault in module XPCOM.DLL at 0177:60d07310. Registers: EAX=00000000 CS=0177 EIP=60d07310 EFLGS=00010246 EBX=0340e7a0 SS=017f ESP=007ff278 EBP=007ff29c ECX=0340e7f0 DS=017f ESI=00000000 FS=3c27 EDX=81a5a528 ES=017f EDI=007ff298 GS=0000 Bytes at CS:EIP: 8b 06 56 ff 50 04 8d 4d e8 e8 ab 46 fe ff ff 75 Stack dump: 00000000 80000000 60d17408 60d195ec 91775d60 11d2d5dc e000fb92 0f570598 00000000 007ff2fc 60ce2fd6 0340e880 60d175a8 00000000 0340e560 00000000 ======================================== Howard Ryan CustomBrowser.com
XPCOM is causing serious problems for embedders like the activex control because the initialisation/termination methods don't like to be called more than once. VB creates/destroys the control multiple times and XPCOM crashes. I have a hack in my local tree that works around it at the expense of some memory leakage at shutdown and I will try to get it in as soon as my plate is cleared a bit.
Adding embed keyword. Proposed patch follows
Keywords: embed
I have the fix in hand. Bumping priority and adding keyword to raise profile.
Keywords: nsbeta3
Priority: P3 → P1
Whiteboard: [nsbeta3-]
this is activeX control specific and it's blocking some developers.
Whiteboard: [nsbeta3-] → [nsbeta3+]
Fix checked in. VB programmers should be able to stop / start the control to their heart's content once the checkin filters through to the nightlies. There are some problems still with VB however. Calling control methods from VB sometimes yields cryptic RPC error messages. I don't know what causes these yet. If you start to see them, you may have to build the EXE and run that standalone to test your app's behaviour properly.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: