Put a reentrancy hack into ActiveX control to prevent multiple instances of the control each trying to call NS_InitXPCOM and crashing. Should help VB programmers a lot. b=39158, a=valeski, r=valeski